# plist-pls

./: Cargo.toml  README.md
src/: data.rs  dictionary.rs  lib.rs  xml.rs
src/ascii/: builders.rs  errors.rs  mod.rs
src/xml/: README.md  builders.rs  errors.rs  lexer.rs  mod.rs  writer.rs
test_data/: Kerning.glyphs  NewFontG3.glyphs  xml.plist
tests/: xml.rs
