[package]
name = "plist-pls"
description = "Fast, zero-copy XML & ASCII plist parsing"
categories = ["parser-implementations"]
keywords = ["plist", "parser", "apple"]
version = "0.1.0"
edition = "2021"
authors = ["alpha-tango-kilo <git@heyatk.com>"]
license = "MIT OR Apache-2.0"
repository = "https://codeberg.org/alpha-tango-kilo/plist-pls"

[dependencies]
logos = "0.14"
regex = "1.10"
